fix overflow

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -29,7 +29,7 @@
 .picture {
     justify-content: center;
     display: flex;
-    margin-top: 50px;
+    /* margin-top: 50px; */
 
 }
 
