--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -9,14 +9,9 @@
     backdrop-filter: blur(10px);
     position: sticky;
     top: 0;
-    z-index: 100;
+
 }
 
-.navigation.open {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
 
 
 .logo img {
